# toa-static-server

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: cli.rs  lib.rs  main.rs  server.rs  utils.rs
