[package]
name = "toa-static-server"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
categories = ["command-line-utilities"]
description = "Kawaii HTTP Static Server"

homepage = "https://github.com/DoumanAsh/toa-static-server"
repository = "https://github.com/DoumanAsh/toa-static-server"

readme = "README.md"
keywords = ["static-server"]
license = "MIT"

[lib]
path = "src/lib.rs"
name = "hyper_static"

[dependencies]
unicase = "^2"
deflate = "^0.7"
futures = "^0.1"
memmap = "^0.5"
hyper = "^0.11"
mime_guess = "^2.0.0-alpha"

[dependencies.clap]
version = "^2"
default-features = false
features = ["suggestions", "wrap_help"]
